--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>dd_monitor</title>
+    <title>DD 大屏</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but dd_monitor doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but DD monitor doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <style>
+      body {
+        margin: 0;
+      }
+      .splash-screen {
+        display: flex; justify-content: center; align-items: center;
+        height: 100vh; width: 100vw;
+        margin: 0; padding: 0;
+      }
+      .splash-screen img {
+        height: 20%; width: auto;
+      }
+    </style>
+
+    <div id="app">
+      <div class="splash-screen">
+        <img src="img/dd.png" />
+      </div>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
