--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>DD 大屏</title>
+    <title>DD大屏</title>
+    <link href="https://cdn.bootcss.com/font-awesome/5.11.2/css/all.min.css" rel="stylesheet">
   </head>
   <body>
     <noscript>
@@ -16,7 +17,7 @@
         margin: 0;
       }
       .splash-screen {
-        display: flex; justify-content: center; align-items: center;
+        display: flex; flex-direction: column; justify-content: center; align-items: center;
         height: 100vh; width: 100vw;
         margin: 0; padding: 0;
       }
@@ -28,6 +29,7 @@
     <div id="app">
       <div class="splash-screen">
         <img src="img/dd.png" />
+        <h3>Loading...</h3>
       </div>
     </div>
     <!-- built files will be auto injected -->
