--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
     <style>
       body {
         margin: 0;
+        background-color: #163c48;
+        color: white;
       }
       .splash-screen {
         display: flex; flex-direction: column; justify-content: center; align-items: center;
