--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,8 +15,6 @@
     <style>
       body {
         margin: 0;
-        background-color: #163c48;
-        color: white;
       }
       .splash-screen {
         display: flex; flex-direction: column; justify-content: center; align-items: center;
